# calendarapp

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: app.cpp.7137C4126FCB4807.idx  app.h.D2CC316168DF9C86.idx  app_panel.cpp.4C8DE8685CE64986.idx  app_panel.h.6D32C617E4BF3D55.idx  calender.cpp.A634806CE5C89A13.idx  calender.h.BEBC292BD5528FC7.idx  constants.h.0CB0B4755BD27BAA.idx  database.cpp.3D22EC28B79DFD13.idx  database.h.7028005102DF9BBA.idx  main_frame.cpp.ADA2F73FD96A06BB.idx  main_frame.h.FB39BB692305AD70.idx  task.cpp.BDF1F9328C99B962.idx  task.h.9A472C54741EE864.idx  tasklist.cpp.F15193AC5E0F602F.idx  tasklist.h.800A685722798CE3.idx  todo.cpp.BE9F07ED13FA29BB.idx  todo.h.1A21A33290B02F3E.idx
dependencies/: CMakeLists.txt
include/app/: database.h  database.h.old  task.h  task.h.old
include/gui/: main_frame.h  tasklist.h
include/gui/widgets/: daterangepicker.h  durationpicker.h.old
src/app/: database.cpp  database.cpp.old  task.cpp  task.cpp.old
src/gui/: app.cpp  main_frame.cpp  tasklist.cpp  todo.cpp
src/gui/widgets/: daterangepicker.cpp  durationpicker.cpp.old
